added new method in controller. Replace properties on config server
