# src/main/resources/api.yaml
@@ -86,6 +86,35 @@ paths:
         '404':
           description: Not Found
       deprecated: false
+  '/attendance/emp/{employeeId}':
+    get:
+      tags:
+        - attendanceSheetController
+      summary: get attendance by employee id
+      operationId: getAttendanceByEmployee
+      produces:
+        - '*/*'
+      parameters:
+        - name: employeeId
+          in: path
+          description: employeeId
+          required: true
+          type: integer
+          format: int64
+      responses:
+        '200':
+          description: OK
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/AttendanceSheetDto'
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '404':
+          description: Not Found
+      deprecated: false
   '/attendance/{attendanceId}':
     get:
       tags:
